# presentation-20260210-direct-ptychography

./: 01.index.md  02.stem-measurements.md  03.phase-problem.md  04.weak-phase-object-approximation.md  05.single-sideband-reconstruction.md  06.bright-field-loop.md  07.parallax-imaging.md  08.scan-upsampling.md  09.experimental-upsampling.md  10.unified-framework.md  11.streaming-parallax.md  12.beyond-wpoa.md  13.higher-order-ms.md  curvenote.yml  myst.yml  pyproject.toml  requirements.txt
notebooks/: 03.phase-problem-nb.ipynb  05.parallax-direct-ptycho-nb.ipynb  12.upsampled-direct-ptychography-nb.ipynb  13.upsampled-example.ipynb  streaming-parallax-numba.ipynb
